Fix for issue 2729: Formatting the footer to drop to the bottom of the page so it does not overlap the other elements being displayed. Added a wrapper class to content.html and assignment_content.html and some styling to core and navigation

--- a/app/assets/stylesheets/common/_navigation.scss
+++ b/app/assets/stylesheets/common/_navigation.scss
@@ -88,6 +88,7 @@ footer {
   font-size: 0.95em;
   padding: 2em $dimen-horizontal;
   text-align: center;
+  border-top: 1px solid $blue;
 
   @include breakpoint(mobile) {
     display: none;
